--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,10 @@ dist
 dist-ssr
 *.local
 
+# Vite cache
+node_modules/.vite
+.vite
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
