--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "test:hmr": "./test-hmr.sh",
     "lint": "eslint .",
     "preview": "vite preview",
+    "deploy": "npm run build && vercel --prod",
+    "deploy:preview": "npm run build && vercel",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest --coverage",
